Fix Game Log Spacing on iPad
- Use a separate div to restrict the height
- Tested on Chrome and iPad Simulator
- Fixes: #19

--- a/src/styles/GameLog.module.css
+++ b/src/styles/GameLog.module.css
@@ -1,8 +1,5 @@
 .logs {
-  display: flex;
-  flex-direction: column;
   width: 100%;
-
   margin: 10px 0;
   border-radius: 5px;
   border: solid 2px;
@@ -10,6 +7,11 @@
 
   overflow-y: scroll;
   scroll-behavior: smooth;
+}
+
+.logs_inner {
+  display: flex;
+  flex-direction: column;
 }
 
 .logs_height {
